aws_s3/k8s/local-s3.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-s3
  labels:
    name: local-s3
spec:
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
  selector:
    name: local-s3
