aws_s3/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: local-s3.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: local-s3
                port:
                  number: 80
